--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 210,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 220,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 271,
    "metadata": {
     "scrolled": true
    },
@@ -795,7 +795,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 227,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -859,107 +859,107 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Cabrera High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1858</td>\n",
-       "      <td>$1,081,356.00</td>\n",
-       "      <td>$582.00</td>\n",
-       "      <td>83.061895</td>\n",
-       "      <td>83.975780</td>\n",
-       "      <td>94.133477</td>\n",
-       "      <td>97.039828</td>\n",
-       "      <td>91.334769</td>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>$1,043,130.00</td>\n",
-       "      <td>$638.00</td>\n",
-       "      <td>83.418349</td>\n",
-       "      <td>83.848930</td>\n",
-       "      <td>93.272171</td>\n",
-       "      <td>97.308869</td>\n",
-       "      <td>90.948012</td>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Griffin High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1468</td>\n",
-       "      <td>$917,500.00</td>\n",
-       "      <td>$625.00</td>\n",
-       "      <td>83.351499</td>\n",
-       "      <td>83.816757</td>\n",
-       "      <td>93.392371</td>\n",
-       "      <td>97.138965</td>\n",
-       "      <td>90.599455</td>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wilson High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>2283</td>\n",
-       "      <td>$1,319,574.00</td>\n",
-       "      <td>$578.00</td>\n",
-       "      <td>83.274201</td>\n",
-       "      <td>83.989488</td>\n",
-       "      <td>93.867718</td>\n",
-       "      <td>96.539641</td>\n",
-       "      <td>90.582567</td>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Pena High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>962</td>\n",
-       "      <td>$585,858.00</td>\n",
-       "      <td>$609.00</td>\n",
-       "      <td>83.839917</td>\n",
-       "      <td>84.044699</td>\n",
-       "      <td>94.594595</td>\n",
-       "      <td>95.945946</td>\n",
-       "      <td>90.540541</td>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                    School Type  Total Students Total School Budget  \\\n",
-       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
-       "Thomas High School      Charter            1635       $1,043,130.00   \n",
-       "Griffin High School     Charter            1468         $917,500.00   \n",
-       "Wilson High School      Charter            2283       $1,319,574.00   \n",
-       "Pena High School        Charter             962         $585,858.00   \n",
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
        "\n",
-       "                    Per Student Budget  Average Math Score  \\\n",
-       "Cabrera High School            $582.00           83.061895   \n",
-       "Thomas High School             $638.00           83.418349   \n",
-       "Griffin High School            $625.00           83.351499   \n",
-       "Wilson High School             $578.00           83.274201   \n",
-       "Pena High School               $609.00           83.839917   \n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
        "\n",
-       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
-       "Cabrera High School              83.975780       94.133477          97.039828   \n",
-       "Thomas High School               83.848930       93.272171          97.308869   \n",
-       "Griffin High School              83.816757       93.392371          97.138965   \n",
-       "Wilson High School               83.989488       93.867718          96.539641   \n",
-       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
        "\n",
-       "                     % Overall Passing  \n",
-       "Cabrera High School          91.334769  \n",
-       "Thomas High School           90.948012  \n",
-       "Griffin High School          90.599455  \n",
-       "Wilson High School           90.582567  \n",
-       "Pena High School             90.540541  "
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 228,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "School_Summary3 = School_Summary.sort_values(\"% Overall Passing\", ascending = True)\n",
-    "Bottom_Performing_Schools = School_Summary2.iloc[[0,1,2,3,4]]\n",
+    "Bottom_Performing_Schools = School_Summary3.iloc[[0,1,2,3,4]]\n",
     "Bottom_Performing_Schools"
    ]
   },
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -1148,12 +1148,39 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 273,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Grade9 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"9th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "Grade9_By_School = Grade9.groupby(\"school_name\")\n",
+    "Grade9_Math_Averages = Grade9_By_School[\"math_score\"].mean()\n",
+    "\n",
+    "Grade10 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"10th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "Grade10_By_School = Grade10.groupby(\"school_name\")\n",
+    "Grade10_Math_Averages = Grade10_By_School[\"math_score\"].mean()\n",
+    "\n",
+    "Grade11 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"11th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "Grade11_By_School = Grade11.groupby(\"school_name\")\n",
+    "Grade11_Math_Averages = Grade11_By_School[\"math_score\"].mean()\n",
+    "\n",
+    "Grade12 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"12th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "Grade12_By_School = Grade12.groupby(\"school_name\")\n",
+    "Grade12_Math_Averages = Grade12_By_School[\"math_score\"].mean()\n",
+    "\n",
+    "\n",
+    "School_Summary_Math = pd.merge(Grade9_Math_Averages, Grade10_Math_Averages, on=\"school_name\")\n",
+    "School_Summary_Math = pd.merge(School_Summary_Math, Grade11_Math_Averages, on=\"school_name\")\n",
+    "School_Summary_Math = pd.merge(School_Summary_Math, Grade12_Math_Averages, on=\"school_name\")\n",
+    "\n",
+    "#We modify the title of each column as required: \n",
+    "School_Summary_Math.columns = [\"9th\", \"10th\", \"11th\", \"12th\"]\n",
+    "School_Summary_Math.index.name = None\n",
+    "\n",
+    "School_Summary_Math"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1171,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -1330,12 +1357,28 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Grade9_Reading_Averages = Grade9_By_School[\"reading_score\"].mean()\n",
+    "Grade10_Reading_Averages = Grade10_By_School[\"reading_score\"].mean()\n",
+    "Grade11_Reading_Averages = Grade11_By_School[\"reading_score\"].mean()\n",
+    "Grade12_Reading_Averages = Grade12_By_School[\"reading_score\"].mean()\n",
+    "\n",
+    "\n",
+    "School_Summary_Reading = pd.merge(Grade9_Reading_Averages, Grade10_Reading_Averages, on=\"school_name\")\n",
+    "School_Summary_Reading = pd.merge(School_Summary_Reading, Grade11_Reading_Averages, on=\"school_name\")\n",
+    "School_Summary_Reading = pd.merge(School_Summary_Reading, Grade12_Reading_Averages, on=\"school_name\")\n",
+    "\n",
+    "#We modify the title of each column as required: \n",
+    "School_Summary_Reading.columns = [\"9th\", \"10th\", \"11th\", \"12th\"]\n",
+    "School_Summary_Reading.index.name = None\n",
+    "\n",
+    "School_Summary_Reading"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1358,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -1435,34 +1478,80 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Average Math Score  Average Reading Score  \\\n",
-       "Spending Ranges (Per Student)                                              \n",
-       "<$584                                       83.46                  83.93   \n",
-       "$585-629                                    81.90                  83.16   \n",
-       "$630-644                                    78.52                  81.62   \n",
-       "$645-675                                    77.00                  81.03   \n",
+       "                              Average Math Score Average Reading Score  \\\n",
+       "Spending Ranges (Per Student)                                            \n",
+       "<$584                                      83.46                 83.93   \n",
+       "$585-629                                   81.90                 83.16   \n",
+       "$630-644                                   78.52                 81.62   \n",
+       "$645-675                                   77.00                 81.03   \n",
        "\n",
-       "                               % Passing Math  % Passing Reading  \\\n",
-       "Spending Ranges (Per Student)                                      \n",
-       "<$584                                   93.46              96.61   \n",
-       "$585-629                                87.13              92.72   \n",
-       "$630-644                                73.48              84.39   \n",
-       "$645-675                                66.16              81.13   \n",
+       "                              % Passing Math % Passing Reading  \\\n",
+       "Spending Ranges (Per Student)                                    \n",
+       "<$584                                  93.46             96.61   \n",
+       "$585-629                               87.13             92.72   \n",
+       "$630-644                               73.48             84.39   \n",
+       "$645-675                               66.16             81.13   \n",
        "\n",
-       "                               % Overall Passing  \n",
-       "Spending Ranges (Per Student)                     \n",
-       "<$584                                      90.37  \n",
-       "$585-629                                   81.42  \n",
-       "$630-644                                   62.86  \n",
-       "$645-675                                   53.53  "
+       "                              % Overall Passing  \n",
+       "Spending Ranges (Per Student)                    \n",
+       "<$584                                     90.37  \n",
+       "$585-629                                  81.42  \n",
+       "$630-644                                  62.86  \n",
+       "$645-675                                  53.53  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "School_psb1 = School_psb\n",
+    "School_Summary_bins = School_Summary\n",
+    "School_Summary_bins.index.name = 'school_name'\n",
+    "School_Summary_bins = pd.merge(School_Summary_bins, School_psb1,on=\"school_name\")\n",
+    "#School_Summary[\"Per Student Budget\"] = School_Summary[\"Per Student Budget\"].astype(str).astype(int)\n",
+    "#School_Summary.dtypes\n",
+    "\n",
+    "bins = [0, 584, 629, 644, 675]\n",
+    "group_labels = [\"<$584\", \"$585-629\", \"$630-644\", \"$645-675\"]\n",
+    "School_Summary_bins[\"SPR\"] = pd.cut(School_Summary_bins[0], bins, labels=group_labels)\n",
+    "\n",
+    "School_by_Spending= School_Summary_bins.groupby(\"SPR\")\n",
+    "Math_by_Spending = School_by_Spending[\"Average Math Score\"].mean()\n",
+    "Reading_by_Spending = School_by_Spending[\"Average Reading Score\"].mean()\n",
+    "PercentageMath_by_Spending = School_by_Spending[\"% Passing Math\"].mean()\n",
+    "PercentageRead_by_Spending = School_by_Spending[\"% Passing Reading\"].mean()\n",
+    "OverallPercentage_by_Spending = School_by_Spending[\"% Overall Passing\"].mean()\n",
+    "\n",
+    "###\n",
+    "\n",
+    "Summary_by_School_Spending = pd.merge(Math_by_Spending, Reading_by_Spending, on=\"SPR\")\n",
+    "Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, PercentageMath_by_Spending,on=\"SPR\")\n",
+    "Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, PercentageRead_by_Spending,on=\"SPR\")\n",
+    "Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, OverallPercentage_by_Spending,on=\"SPR\")\n",
+    "\n",
+    "\n",
+    "#Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, Average_Reading_Score1,on=\"school_name\")\n",
+    "#Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, Percentage_Passing_Math1,on=\"school_name\")\n",
+    "\n",
+    "Summary_by_School_Spending.index.name = \"Spending Ranges (Per Student)\"\n",
+    "\n",
+    "Summary_by_School_Spending[\"Average Math Score\"] = Summary_by_School_Spending[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
+    "Summary_by_School_Spending[\"Average Reading Score\"] = Summary_by_School_Spending[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
+    "Summary_by_School_Spending[\"% Passing Math\"] = Summary_by_School_Spending[\"% Passing Math\"].map(\"{:.2f}\".format)\n",
+    "Summary_by_School_Spending[\"% Passing Reading\"] = Summary_by_School_Spending[\"% Passing Reading\"].map(\"{:.2f}\".format)\n",
+    "Summary_by_School_Spending[\"% Overall Passing\"] = Summary_by_School_Spending[\"% Overall Passing\"].map(\"{:.2f}\".format)\n",
+    "\n",
+    "Summary_by_School_Spending\n",
+    "\n",
+    "#School_Summary_bins\n",
+    "#School_Summary_bins[0].str[0]\n",
+    "\n",
+    "#School_Summary_bins[0].astype(str).astype(int)\n",
+    "\n",
+    "#School_Summary_bins.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
