--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
        "$645-675                                  53.53  "
       ]
      },
-     "execution_count": 318,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,96 +1569,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 353,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Average Math Score</th>\n",
-       "      <th>Average Reading Score</th>\n",
-       "      <th>% Passing Math</th>\n",
-       "      <th>% Passing Reading</th>\n",
-       "      <th>% Overall Passing</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>School Size</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Small (&lt;1000)</th>\n",
-       "      <td>83.821598</td>\n",
-       "      <td>83.929843</td>\n",
-       "      <td>93.550225</td>\n",
-       "      <td>96.099437</td>\n",
-       "      <td>89.883853</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Medium (1000-2000)</th>\n",
-       "      <td>83.374684</td>\n",
-       "      <td>83.864438</td>\n",
-       "      <td>93.599695</td>\n",
-       "      <td>96.790680</td>\n",
-       "      <td>90.621535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Large (2000-5000)</th>\n",
-       "      <td>77.746417</td>\n",
-       "      <td>81.344493</td>\n",
-       "      <td>69.963361</td>\n",
-       "      <td>82.766634</td>\n",
-       "      <td>58.286003</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                    Average Math Score  Average Reading Score  % Passing Math  \\\n",
-       "School Size                                                                     \n",
-       "Small (<1000)                83.821598              83.929843       93.550225   \n",
-       "Medium (1000-2000)           83.374684              83.864438       93.599695   \n",
-       "Large (2000-5000)            77.746417              81.344493       69.963361   \n",
-       "\n",
-       "                    % Passing Reading  % Overall Passing  \n",
-       "School Size                                               \n",
-       "Small (<1000)               96.099437          89.883853  \n",
-       "Medium (1000-2000)          96.790680          90.621535  \n",
-       "Large (2000-5000)           82.766634          58.286003  "
+       "School Size\n",
+       "Small (<1000)         83.828654\n",
+       "Medium (1000-2000)    83.372682\n",
+       "Large (2000-5000)     77.477597\n",
+       "Name: math_score, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#School_Summary_bins = pd.merge(School_Summary_bins, School_psb1,on=\"school_name\")\n",
+    "\n",
+    "bins1 = [0, 1000, 2000, 5000]\n",
+    "group_labels1 = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
+    "school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins1, labels=group_labels1)\n",
+    "\n",
+    "Group_by_size = school_data_complete.groupby(\"School Size\")\n",
+    "School_students_bysize = Group_by_size[\"student_name\"].count()\n",
+    "Average_Math_Score_bysize = Group_by_size[\"math_score\"].mean()\n",
+    "Average_Reading_Score_bysize = Group_by_size[\"reading_score\"].mean()\n",
+    "Percentage_Passing_Math_bysize = pd.DataFrame(Group_by_size[\"new_math_score\"].sum() / School_students_bysize *100)\n",
+    "#Percentage_Passing_Reading1 = pd.DataFrame(School_Name_Group[\"new_reading_score\"].sum() / School_students1 *100)\n",
+    "#Percentage_Passing_Overall1 = pd.DataFrame(School_Name_Group[\"passed_both_subjects\"].sum() / School_students1 *100)\n",
+    "\n",
+    "Average_Math_Score_bysize"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1753,7 +1700,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "School_Summary_bins[\"Charter (Y/N)\"] = "
+   ]
   },
   {
    "cell_type": "code",
