--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1590,17 +1590,20 @@
     }
    ],
    "source": [
+    "School_size1 = School_Name_Group[\"budget\"].unique()\n",
+    "\n",
+    "\n",
     "#School_Summary_bins = pd.merge(School_Summary_bins, School_psb1,on=\"school_name\")\n",
     "\n",
-    "bins1 = [0, 1000, 2000, 5000]\n",
-    "group_labels1 = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
-    "school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins1, labels=group_labels1)\n",
+    "#bins1 = [0, 1000, 2000, 5000]\n",
+    "#group_labels1 = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
+    "#school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins1, labels=group_labels1)\n",
     "\n",
-    "Group_by_size = school_data_complete.groupby(\"School Size\")\n",
-    "School_students_bysize = Group_by_size[\"student_name\"].count()\n",
-    "Average_Math_Score_bysize = Group_by_size[\"math_score\"].mean()\n",
-    "Average_Reading_Score_bysize = Group_by_size[\"reading_score\"].mean()\n",
-    "Percentage_Passing_Math_bysize = pd.DataFrame(Group_by_size[\"new_math_score\"].sum() / School_students_bysize *100)\n",
+    "#Group_by_size = school_data_complete.groupby(\"School Size\")\n",
+    "#School_students_bysize = Group_by_size[\"student_name\"].count()\n",
+    "#Average_Math_Score_bysize = Group_by_size[\"math_score\"].mean()\n",
+    "#Average_Reading_Score_bysize = Group_by_size[\"reading_score\"].mean()\n",
+    "#Percentage_Passing_Math_bysize = pd.DataFrame(Group_by_size[\"new_math_score\"].sum() / School_students_bysize *100)\n",
     "#Percentage_Passing_Reading1 = pd.DataFrame(School_Name_Group[\"new_reading_score\"].sum() / School_students1 *100)\n",
     "#Percentage_Passing_Overall1 = pd.DataFrame(School_Name_Group[\"passed_both_subjects\"].sum() / School_students1 *100)\n",
     "\n",
@@ -1623,7 +1626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -1695,13 +1698,30 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 367,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "School_Summary_bins[\"Charter (Y/N)\"] = "
+    "#School_Summary_bins[\"Charter (Y/N)\"] = School_Summary_bins[\"School Type\"] == \"Charter\"\n",
+    "#School_Summary_bins[\"Charter (Y/N)\"] = School_Summary_bins[\"Charter (Y/N)\"]*1\n",
+    "School_by_Type= School_Summary_bins.groupby(\"School Type\")\n",
+    "\n",
+    "Math_by_Type = School_by_Type[\"Average Math Score\"].mean()\n",
+    "Reading_by_Type = School_by_Type[\"Average Reading Score\"].mean()\n",
+    "PercentageMath_by_Type = School_by_Type[\"% Passing Math\"].mean()\n",
+    "PercentageRead_by_Type = School_by_Type[\"% Passing Reading\"].mean()\n",
+    "OverallPercentage_by_Type = School_by_Type[\"% Overall Passing\"].mean()\n",
+    "\n",
+    "###\n",
+    "\n",
+    "Summary_by_School_Type = pd.merge(Math_by_Type, Reading_by_Type, on=\"School Type\")\n",
+    "Summary_by_School_Type = pd.merge(Summary_by_School_Type, PercentageMath_by_Type,on=\"School Type\")\n",
+    "Summary_by_School_Type = pd.merge(Summary_by_School_Type, PercentageRead_by_Type,on=\"School Type\")\n",
+    "Summary_by_School_Type = pd.merge(Summary_by_School_Type, OverallPercentage_by_Type,on=\"School Type\")\n",
+    "\n",
+    "Summary_by_School_Type"
    ]
   },
   {
