--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4             97          84          0  District  2917  1910635  "
       ]
      },
-     "execution_count": 268,
+     "execution_count": 386,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
        "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 269,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 389,
    "metadata": {
     "scrolled": true
    },
@@ -795,7 +795,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 271,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 272,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
        "$645-675                                  53.53  "
       ]
      },
-     "execution_count": 354,
+     "execution_count": 419,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1544,7 @@
     "Summary_by_School_Spending[\"% Overall Passing\"] = Summary_by_School_Spending[\"% Overall Passing\"].map(\"{:.2f}\".format)\n",
     "\n",
     "Summary_by_School_Spending\n",
-    "\n",
+    "#School_Summary_bins\n",
     "#School_Summary_bins\n",
     "#School_Summary_bins[0].str[0]\n",
     "\n",
@@ -1569,45 +1569,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 430,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "School Size\n",
-       "Small (<1000)         83.828654\n",
-       "Medium (1000-2000)    83.372682\n",
-       "Large (2000-5000)     77.477597\n",
-       "Name: math_score, dtype: float64"
-      ]
-     },
-     "execution_count": 353,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Length mismatch: Expected axis has 4 elements, new values have 5 elements",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-430-dbe0646ceab3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mSummary_by_School_Size\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSummary_by_School_Size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPercentage_Passing_Overall_bysize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mon\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"School Size\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mSchool_Summary_Reading\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m\"Average Math Score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Average Reading Score\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"% Passing Math\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"% Passing Reading\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"% Overall Passing\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[0mSummary_by_School_Size\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__setattr__\u001b[1;34m(self, name, value)\u001b[0m\n\u001b[0;32m   5285\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5286\u001b[0m             \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5287\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5288\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5289\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\properties.pyx\u001b[0m in \u001b[0;36mpandas._libs.properties.AxisProperty.__set__\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_set_axis\u001b[1;34m(self, axis, labels)\u001b[0m\n\u001b[0;32m    659\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    660\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_set_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 661\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    662\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_clear_item_cache\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    663\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\internals\\managers.py\u001b[0m in \u001b[0;36mset_axis\u001b[1;34m(self, axis, new_labels)\u001b[0m\n\u001b[0;32m    175\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    176\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnew_len\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mold_len\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 177\u001b[1;33m             raise ValueError(\n\u001b[0m\u001b[0;32m    178\u001b[0m                 \u001b[1;34mf\"Length mismatch: Expected axis has {old_len} elements, new \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    179\u001b[0m                 \u001b[1;34mf\"values have {new_len} elements\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Length mismatch: Expected axis has 4 elements, new values have 5 elements"
+     ]
     }
    ],
    "source": [
-    "School_size1 = School_Name_Group[\"budget\"].unique()\n",
+    "bins_size = [0, 1000, 2000, 5000]\n",
+    "group_labels_size = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
+    "school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins_size, labels=group_labels_size)\n",
     "\n",
+    "Group_by_size = school_data_complete.groupby(\"School Size\")\n",
+    "School_students_bysize = Group_by_size[\"student_name\"].count()\n",
+    "Average_Math_Score_bysize = Group_by_size[\"math_score\"].mean()\n",
+    "Average_Reading_Score_bysize = Group_by_size[\"reading_score\"].mean()\n",
+    "Percentage_Passing_Math_bysize = pd.DataFrame(Group_by_size[\"new_math_score\"].sum() / School_students_bysize *100)\n",
+    "Percentage_Passing_Reading_bysize = pd.DataFrame(Group_by_size[\"new_reading_score\"].sum() / School_students_bysize *100)\n",
+    "Percentage_Passing_Overall_bysize = pd.DataFrame(Group_by_size[\"passed_both_subjects\"].sum() / School_students_bysize *100)\n",
     "\n",
-    "#School_Summary_bins = pd.merge(School_Summary_bins, School_psb1,on=\"school_name\")\n",
+    "Summary_by_School_Size = pd.merge(Average_Math_Score_bysize, Average_Reading_Score_bysize, on=\"School Size\")\n",
+    "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Math_bysize,on=\"School Size\")\n",
+    "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Reading_bysize,on=\"School Size\")\n",
+    "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Overall_bysize,on=\"School Size\")\n",
     "\n",
-    "#bins1 = [0, 1000, 2000, 5000]\n",
-    "#group_labels1 = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
-    "#school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins1, labels=group_labels1)\n",
+    "School_Summary_Reading.columns = [\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
     "\n",
-    "#Group_by_size = school_data_complete.groupby(\"School Size\")\n",
-    "#School_students_bysize = Group_by_size[\"student_name\"].count()\n",
-    "#Average_Math_Score_bysize = Group_by_size[\"math_score\"].mean()\n",
-    "#Average_Reading_Score_bysize = Group_by_size[\"reading_score\"].mean()\n",
-    "#Percentage_Passing_Math_bysize = pd.DataFrame(Group_by_size[\"new_math_score\"].sum() / School_students_bysize *100)\n",
-    "#Percentage_Passing_Reading1 = pd.DataFrame(School_Name_Group[\"new_reading_score\"].sum() / School_students1 *100)\n",
-    "#Percentage_Passing_Overall1 = pd.DataFrame(School_Name_Group[\"passed_both_subjects\"].sum() / School_students1 *100)\n",
-    "\n",
-    "Average_Math_Score_bysize"
+    "Summary_by_School_Size\n"
    ]
   },
   {
