--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -829,11 +829,13 @@
     }
    ],
    "source": [
-    "#(1) We organize the data frame found in the previous exercise based on the % of students that passed both subjects per school. The highest values values will show at the top.\n",
+    "#(1) We organize the data frame found in question #2 based on the % of students that passed both subjects per school. The HIGHEST values values will show at the top.\n",
     "School_Summary2 = School_Summary.sort_values(\"% Overall Passing\", ascending = False)\n",
     "\n",
     "#(2) We are asked for the top 5 schools. Hence, we create a data frame with the first 5 columns.\n",
     "Top_Performing_Schools = School_Summary2.iloc[[0,1,2,3,4]]\n",
+    "\n",
+    "#(3) Final version of the table\n",
     "Top_Performing_Schools"
    ]
   },
@@ -853,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 390,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -983,14 +985,19 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 390,
+     "execution_count": 437,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#(1) We organize the data frame found in question #2 based on the % of students that passed both subjects per school. The LOWEST values values will show at the top.\n",
     "School_Summary3 = School_Summary.sort_values(\"% Overall Passing\", ascending = True)\n",
+    "\n",
+    "#(2) We are asked for the bottom 5 schools. Hence, we create a data frame with the first 5 columns.\n",
     "Bottom_Performing_Schools = School_Summary3.iloc[[0,1,2,3,4]]\n",
+    "\n",
+    "#(3) Final version of the table\n",
     "Bottom_Performing_Schools"
    ]
   },
@@ -1020,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
@@ -1179,37 +1186,53 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#(1) Grade 9\n",
+    "\n",
+    "#Using a conditional statement, we create a data frame with only 9th graders. We only include the columns that interest us.\n",
     "Grade9 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"9th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "#We group the data by school and find the average score of 9th graders per school.\n",
     "Grade9_By_School = Grade9.groupby(\"school_name\")\n",
     "Grade9_Math_Averages = Grade9_By_School[\"math_score\"].mean()\n",
     "\n",
+    "#(2) Grade 10\n",
+    "\n",
+    "#Using a conditional statement, we create a data frame with only 10th graders. We only include the columns that interest us.\n",
     "Grade10 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"10th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "#We group the data by school and find the average score of 10th graders per school.\n",
     "Grade10_By_School = Grade10.groupby(\"school_name\")\n",
     "Grade10_Math_Averages = Grade10_By_School[\"math_score\"].mean()\n",
     "\n",
+    "#(3) Grade 11\n",
+    "\n",
+    "#Using a conditional statement, we create a data frame with only 11th graders. We only include the columns that interest us.\n",
     "Grade11 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"11th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "#We group the data by school and find the average score of 11th graders per school.\n",
     "Grade11_By_School = Grade11.groupby(\"school_name\")\n",
     "Grade11_Math_Averages = Grade11_By_School[\"math_score\"].mean()\n",
     "\n",
+    "#(4) Grade 12\n",
+    "#Using a conditional statement, we create a data frame with only 12th graders. We only include the columns that interest us.\n",
     "Grade12 = school_data_complete.loc[school_data_complete[\"grade\"] ==\"12th\", (\"school_name\",\"math_score\", \"reading_score\")]\n",
+    "#We group the data by school and find the average score of 12th graders per school.\n",
     "Grade12_By_School = Grade12.groupby(\"school_name\")\n",
     "Grade12_Math_Averages = Grade12_By_School[\"math_score\"].mean()\n",
     "\n",
-    "\n",
+    "#(5) We build the data frame with the values found in (1,2,3 & 4)\n",
     "School_Summary_Math = pd.merge(Grade9_Math_Averages, Grade10_Math_Averages, on=\"school_name\")\n",
     "School_Summary_Math = pd.merge(School_Summary_Math, Grade11_Math_Averages, on=\"school_name\")\n",
     "School_Summary_Math = pd.merge(School_Summary_Math, Grade12_Math_Averages, on=\"school_name\")\n",
     "\n",
-    "#We modify the title of each column as required: \n",
+    "#(6) We modify the title of each column as per the sample:\n",
     "School_Summary_Math.columns = [\"9th\", \"10th\", \"11th\", \"12th\"]\n",
     "School_Summary_Math.index.name = None\n",
     "\n",
+    "#(7) Final version of the table\n",
     "School_Summary_Math"
    ]
   },
@@ -1229,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 439,
    "metadata": {},
    "outputs": [
     {
@@ -1388,26 +1411,29 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 439,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#(1) We already customized our datasets using a conditional statement in the prior exercise. We use the datasets generated in the last question and simply find the average reading score per grade per school.\n",
+    "\n",
     "Grade9_Reading_Averages = Grade9_By_School[\"reading_score\"].mean()\n",
     "Grade10_Reading_Averages = Grade10_By_School[\"reading_score\"].mean()\n",
     "Grade11_Reading_Averages = Grade11_By_School[\"reading_score\"].mean()\n",
     "Grade12_Reading_Averages = Grade12_By_School[\"reading_score\"].mean()\n",
     "\n",
-    "\n",
+    "#(2) We build the data frame with the series created in (1)\n",
     "School_Summary_Reading = pd.merge(Grade9_Reading_Averages, Grade10_Reading_Averages, on=\"school_name\")\n",
     "School_Summary_Reading = pd.merge(School_Summary_Reading, Grade11_Reading_Averages, on=\"school_name\")\n",
     "School_Summary_Reading = pd.merge(School_Summary_Reading, Grade12_Reading_Averages, on=\"school_name\")\n",
     "\n",
-    "#We modify the title of each column as required: \n",
+    "#(3) We modify the title of each column as per the sample:\n",
     "School_Summary_Reading.columns = [\"9th\", \"10th\", \"11th\", \"12th\"]\n",
     "School_Summary_Reading.index.name = None\n",
     "\n",
+    "#(4) Final version of the table\n",
     "School_Summary_Reading"
    ]
   },
@@ -1537,6 +1563,9 @@
     }
    ],
    "source": [
+    "#To be catious, I decided to create new data sets for the last 3 questions.\n",
+    "\n",
+    "#Back in Q1, we determ\n",
     "School_psb1 = School_psb\n",
     "School_Summary_bins = School_Summary\n",
     "School_Summary_bins.index.name = 'school_name'\n",
