--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 419,
+   "execution_count": 440,
    "metadata": {},
    "outputs": [
     {
@@ -1557,34 +1557,47 @@
        "$645-675                                  53.53  "
       ]
      },
-     "execution_count": 419,
+     "execution_count": 440,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#To be catious, I decided to create new data sets for the last 3 questions.\n",
+    "#(1) To be catious, I decided to create a couple of new data sets/series for the last 3 questions. \n",
     "\n",
-    "#Back in Q1, we determ\n",
+    "#Back in Q1, we determined the budget per student. I am creating a new data frame for this value.\n",
     "School_psb1 = School_psb\n",
+    "#Back in Q2, our final output was the School_Summary table. I am creating a new data frame for this value.\n",
     "School_Summary_bins = School_Summary\n",
-    "School_Summary_bins.index.name = 'school_name'\n",
-    "School_Summary_bins = pd.merge(School_Summary_bins, School_psb1,on=\"school_name\")\n",
-    "#School_Summary[\"Per Student Budget\"] = School_Summary[\"Per Student Budget\"].astype(str).astype(int)\n",
-    "#School_Summary.dtypes\n",
     "\n",
+    "#(2) We add the information that our School_Summary_bins data frame requires to evaluate indicators based on school spending\n",
+    "\n",
+    "#We bring back the name of the index so we can merge data frames\n",
+    "School_Summary_bins.index.name = 'school_name'\n",
+    "#We add a column indicating the school spending per student to our School_Summary_bins data frame\n",
+    "School_Summary_bins = pd.merge(School_Summary_bins, School_psb1,on=\"school_name\")\n",
+    "\n",
+    "#(3) We add bins as per the sample provided. We add a new column to our School_Summary_bins dataframe. This column will show the bins.\n",
     "bins = [0, 584, 629, 644, 675]\n",
     "group_labels = [\"<$584\", \"$585-629\", \"$630-644\", \"$645-675\"]\n",
     "School_Summary_bins[\"SPR\"] = pd.cut(School_Summary_bins[0], bins, labels=group_labels)\n",
     "\n",
+    "#(4) We find all the information required to build the table required in this exercise\n",
+    "\n",
+    "#We group our data based on the bins\n",
     "School_by_Spending= School_Summary_bins.groupby(\"SPR\")\n",
+    "#We find the average score in math for each of our 'budget per student' bins\n",
     "Math_by_Spending = School_by_Spending[\"Average Math Score\"].mean()\n",
+    "#We find the average score in reading for each of our 'budget per student' bins\n",
     "Reading_by_Spending = School_by_Spending[\"Average Reading Score\"].mean()\n",
+    "#We find the % of students that passed math for each of our 'budget per student' bins\n",
     "PercentageMath_by_Spending = School_by_Spending[\"% Passing Math\"].mean()\n",
+    "#We find the % of students that passed reading for each of our 'budget per student' bins\n",
     "PercentageRead_by_Spending = School_by_Spending[\"% Passing Reading\"].mean()\n",
+    "#We find the % of students that passed reading AND math for each of our 'budget per student' bins\n",
     "OverallPercentage_by_Spending = School_by_Spending[\"% Overall Passing\"].mean()\n",
     "\n",
-    "###\n",
+    "#(5) We build the data frame with the values found in (3)\n",
     "\n",
     "Summary_by_School_Spending = pd.merge(Math_by_Spending, Reading_by_Spending, on=\"SPR\")\n",
     "Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, PercentageMath_by_Spending,on=\"SPR\")\n",
@@ -1592,25 +1605,17 @@
     "Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, OverallPercentage_by_Spending,on=\"SPR\")\n",
     "\n",
     "\n",
-    "#Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, Average_Reading_Score1,on=\"school_name\")\n",
-    "#Summary_by_School_Spending = pd.merge(Summary_by_School_Spending, Percentage_Passing_Math1,on=\"school_name\")\n",
+    "#(6) We modify the title of our index and make format changes as per the sample provided\n",
     "\n",
     "Summary_by_School_Spending.index.name = \"Spending Ranges (Per Student)\"\n",
-    "\n",
     "Summary_by_School_Spending[\"Average Math Score\"] = Summary_by_School_Spending[\"Average Math Score\"].map(\"{:.2f}\".format)\n",
     "Summary_by_School_Spending[\"Average Reading Score\"] = Summary_by_School_Spending[\"Average Reading Score\"].map(\"{:.2f}\".format)\n",
     "Summary_by_School_Spending[\"% Passing Math\"] = Summary_by_School_Spending[\"% Passing Math\"].map(\"{:.2f}\".format)\n",
     "Summary_by_School_Spending[\"% Passing Reading\"] = Summary_by_School_Spending[\"% Passing Reading\"].map(\"{:.2f}\".format)\n",
     "Summary_by_School_Spending[\"% Overall Passing\"] = Summary_by_School_Spending[\"% Overall Passing\"].map(\"{:.2f}\".format)\n",
     "\n",
-    "Summary_by_School_Spending\n",
-    "#School_Summary_bins\n",
-    "#School_Summary_bins\n",
-    "#School_Summary_bins[0].str[0]\n",
-    "\n",
-    "#School_Summary_bins[0].astype(str).astype(int)\n",
-    "\n",
-    "#School_Summary_bins.dtypes"
+    "#(7) Final version of the table\n",
+    "Summary_by_School_Spending\n"
    ]
   },
   {
@@ -1629,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 443,
    "metadata": {
     "scrolled": true
    },
@@ -1713,24 +1718,38 @@
        "Large (2000-5000)           82.125158          56.574046  "
       ]
      },
-     "execution_count": 431,
+     "execution_count": 443,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "#(1) We create the requested bins\n",
     "bins_size = [0, 1000, 2000, 5000]\n",
     "group_labels_size = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]\n",
+    "\n",
+    "#(2) We go back to our original data frame (the one that combined the 'School' and 'Student' Data Files). We add a column that states the School Size bin.\n",
     "school_data_complete[\"School Size\"] = pd.cut(school_data_complete[\"size\"], bins_size, labels=group_labels_size)\n",
     "\n",
+    "#(3)We find all the information required to build the table required in this exercise\n",
+    "\n",
+    "#We group our data based on the bins\n",
     "Group_by_size = school_data_complete.groupby(\"School Size\")\n",
+    "#We count the number of students that each school size has\n",
     "School_students_bysize = Group_by_size[\"student_name\"].count()\n",
+    "#We determine the average math score per school size\n",
     "Average_Math_Score_bysize = Group_by_size[\"math_score\"].mean()\n",
+    "#We determine the average reading score per school size\n",
     "Average_Reading_Score_bysize = Group_by_size[\"reading_score\"].mean()\n",
+    "#We add our 'new_math_score' column with True/False values. Once we have determined the # of students that passed math by size, we divide these figures by the total # of students by size.\n",
     "Percentage_Passing_Math_bysize = pd.DataFrame(Group_by_size[\"new_math_score\"].sum() / School_students_bysize *100)\n",
+    "#We add our 'new_reading_score' column with True/False values. Once we have determined the # of students that passed reading by size, we divide these figures by the total # of students by size.\n",
     "Percentage_Passing_Reading_bysize = pd.DataFrame(Group_by_size[\"new_reading_score\"].sum() / School_students_bysize *100)\n",
+    "#We add our 'passed_both_subjects' column with True/False values. Once we have determined the # of students that passed reading AND math by size, we divide these figures by the total # of students by size.\n",
     "Percentage_Passing_Overall_bysize = pd.DataFrame(Group_by_size[\"passed_both_subjects\"].sum() / School_students_bysize *100)\n",
     "\n",
+    "#(4)\n",
     "Summary_by_School_Size = pd.merge(Average_Math_Score_bysize, Average_Reading_Score_bysize, on=\"School Size\")\n",
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Math_bysize,on=\"School Size\")\n",
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Reading_bysize,on=\"School Size\")\n",
@@ -1757,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 441,
    "metadata": {},
    "outputs": [
     {
@@ -1829,29 +1848,37 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 367,
+     "execution_count": 441,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#School_Summary_bins[\"Charter (Y/N)\"] = School_Summary_bins[\"School Type\"] == \"Charter\"\n",
-    "#School_Summary_bins[\"Charter (Y/N)\"] = School_Summary_bins[\"Charter (Y/N)\"]*1\n",
-    "School_by_Type= School_Summary_bins.groupby(\"School Type\")\n",
+    "#We will use the same 'School_Summary_bins' data frame as in the question where we found scores by School Spending (two questions ago):\n",
     "\n",
+    "#(1) We find all the information required to build the table required in this exercise\n",
+    "\n",
+    "#We group our data based on School Type: Charter or District\n",
+    "School_by_Type= School_Summary_bins.groupby(\"School Type\")\n",
+    "#We find the average score in math per School Type\n",
     "Math_by_Type = School_by_Type[\"Average Math Score\"].mean()\n",
+    "#We find the average score in language per School Type\n",
     "Reading_by_Type = School_by_Type[\"Average Reading Score\"].mean()\n",
+    "#We find the % of students that passed math per School Type\n",
     "PercentageMath_by_Type = School_by_Type[\"% Passing Math\"].mean()\n",
+    "#We find the % of students that passed reading per School Type\n",
     "PercentageRead_by_Type = School_by_Type[\"% Passing Reading\"].mean()\n",
+    "#We find the % of students that passed reading AND math per School Type\n",
     "OverallPercentage_by_Type = School_by_Type[\"% Overall Passing\"].mean()\n",
     "\n",
-    "###\n",
+    "#(2) We build the data frame with the values found in (1)\n",
     "\n",
     "Summary_by_School_Type = pd.merge(Math_by_Type, Reading_by_Type, on=\"School Type\")\n",
     "Summary_by_School_Type = pd.merge(Summary_by_School_Type, PercentageMath_by_Type,on=\"School Type\")\n",
     "Summary_by_School_Type = pd.merge(Summary_by_School_Type, PercentageRead_by_Type,on=\"School Type\")\n",
     "Summary_by_School_Type = pd.merge(Summary_by_School_Type, OverallPercentage_by_Type,on=\"School Type\")\n",
     "\n",
+    "#(3) Final version of the table\n",
     "Summary_by_School_Type"
    ]
   },
