--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 444,
    "metadata": {
     "scrolled": true
    },
@@ -1718,7 +1718,7 @@
        "Large (2000-5000)           82.125158          56.574046  "
       ]
      },
-     "execution_count": 443,
+     "execution_count": 444,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,14 +1749,17 @@
     "#We add our 'passed_both_subjects' column with True/False values. Once we have determined the # of students that passed reading AND math by size, we divide these figures by the total # of students by size.\n",
     "Percentage_Passing_Overall_bysize = pd.DataFrame(Group_by_size[\"passed_both_subjects\"].sum() / School_students_bysize *100)\n",
     "\n",
-    "#(4)\n",
+    "#(4) We build the data frame with the values found in (3)\n",
+    "\n",
     "Summary_by_School_Size = pd.merge(Average_Math_Score_bysize, Average_Reading_Score_bysize, on=\"School Size\")\n",
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Math_bysize,on=\"School Size\")\n",
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Reading_bysize,on=\"School Size\")\n",
     "Summary_by_School_Size = pd.merge(Summary_by_School_Size, Percentage_Passing_Overall_bysize,on=\"School Size\")\n",
     "\n",
+    "#(5) We modify the titles of each column as per the sample provided\n",
     "Summary_by_School_Size.columns = [\"Average Math Score\", \"Average Reading Score\", \"% Passing Math\", \"% Passing Reading\", \"% Overall Passing\"]\n",
     "\n",
+    "#(6) Final version of the table\n",
     "Summary_by_School_Size\n"
    ]
   },
@@ -1888,7 +1891,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Observable trends: "
+    "#Observable trends: \n",
+    "\n",
+    "#1) Based on the Scores by 'School Type' we observe that Charter schools outperform District schools in all criterias. Students in charter schools have, on average, higher grades in math and reading. Moreover, "
    ]
   }
  ],
