--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -1893,7 +1893,8 @@
    "source": [
     "#Observable trends: \n",
     "\n",
-    "#1) Based on the Scores by 'School Type' we observe that Charter schools outperform District schools in all criterias. Students in charter schools have, on average, higher grades in math and reading. Moreover, "
+    "#1) Based on the Scores by 'School Type' we observe that Charter schools outperform District schools in all criterias. Students in charter schools have, on average, higher grades in math and reading. Moreover, a higher % of students passes/approves the math and reading subjects in 'Charter' schools than in 'District' schools.\n",
+    "#2) An interesting observation can be made based on the Scores per 'School Spending'. It looks like the schools that spend a smaller amount of their budget per student (i.e. they may have a lower budget) are the ones with a higher performance. Schools in the lowest bracket (<$584)"
    ]
   }
  ],
